bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:2: error: value &&! is not a member of Boolean
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {if (aSmile&&bSmile){return true};if(!aSmile&&!bSmile){return true};else{return false}
                                                                                                         ^